# IMU_QT

./: CMakeLists.txt  README.md
include/: gui.ui  imu.h  window.h
src/: imu.cpp  imu_test.cpp  main.cpp  window.cpp
